--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@p0vidl0/nestjs-real-ip",
+  "name": "nestjs-real-ip",
   "author": "Alex Kalashnikov",
   "version": "1.0.0",
   "description": "A concise decorator for retrieving an IP address from http request with Nest.js controller method",
