--- a/package.json
+++ b/package.json
@@ -54,35 +54,36 @@
     "request-ip": "^2.1.3"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.6.5",
+    "@nestjs/common": "^7.6.18",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.6.5",
-    "@nestjs/core": "^7.6.5",
-    "@nestjs/platform-express": "^7.6.5",
-    "@nestjs/platform-fastify": "^7.6.5",
-    "@nestjs/testing": "^7.6.5",
-    "@types/node": "^14.14.14",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.16.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "@nestjs/common": "^7.6.18",
+    "@nestjs/core": "^7.6.18",
+    "@nestjs/platform-express": "^7.6.18",
+    "@nestjs/platform-fastify": "^7.6.18",
+    "@nestjs/testing": "^7.6.18",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^14.17.6",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unused-imports": "^1.0.1",
+    "eslint-plugin-unused-imports": "^1.1.2",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.3",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.12",
+    "rxjs": "^6.6.7",
+    "supertest": "^6.1.4",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^8.3.0",
     "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   },
   "license": "MIT",
   "jest": {
