--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "request-ip": "^2.1.3"
+    "@supercharge/request-ip": "^1.2.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^8.0.0",
