--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "@supercharge/request-ip": "^1.2.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "request-ip": "^2.1.3"
+    "@nestjs/common": "^8.0.0"
   },
   "devDependencies": {
     "@nestjs/common": "^8.0.0",
