--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,6 +9,7 @@ parser: "@typescript-eslint/parser"
 plugins:
   - "@typescript-eslint/eslint-plugin"
   - "unused-imports"
+  - "import"
   - "security"
 
 extends:
