--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "main": "./dist/src/index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint \"{src,test}/**/*.ts\" --fix && prettier --write \"{src,test}/**/*.ts\"",
+    "lint": "eslint \"{src,__tests__}/**/*.ts\" --fix && prettier --write \"{src,__tests__}/**/*.ts\"",
     "test": "jest",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
@@ -57,6 +57,7 @@
     "@nestjs/common": "8 - 9"
   },
   "devDependencies": {
+    "@jest/types": "^28.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -83,7 +84,8 @@
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.0.0"
   },
   "license": "MIT",
   "jest": {
